--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -9,6 +9,7 @@
     xmlns:models="clr-namespace:eTools_Ultimate.Models"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
          Title="Terrain"
     d:DataContext="{d:DesignInstance viewmodels:TerrainsViewModel,
                                      IsDesignTimeCreatable=False}"
@@ -64,7 +65,7 @@
                         FontSize="16"
                         FontWeight="SemiBold"
                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                        Text="No Texture Available" />
+                        Text="{i18n:StringLocalizer 'No Texture Available'}" />
                     <TextBlock
                         MaxWidth="250"
                         Foreground="{DynamicResource TextFillColorSecondaryBrush}"
@@ -104,7 +105,7 @@
                      Margin="10,10,10,10"
                      BorderThickness="0"
                      Icon="Search24"
-                     PlaceholderText="Suche..."
+                     PlaceholderText="{i18n:StringLocalizer 'Search...'}"
                      Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
              </Border>
 
@@ -205,33 +206,33 @@
              <!--  Header Buttons  -->
              <StackPanel
                  Grid.Row="0"
-                 Margin="0,10,20,0"
+                 Margin="0,10,30,0"
                  HorizontalAlignment="Right"
                  VerticalAlignment="Top"
                  Orientation="Horizontal"
                  ZIndex="1">
-                 <ui:Button ToolTip="Undo">
+                 <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
                      <ui:SymbolIcon Symbol="ArrowUndo24" />
                  </ui:Button>
-                 <ui:Button Margin="10,0" ToolTip="Redo">
+                 <ui:Button Margin="10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                      <ui:SymbolIcon Symbol="ArrowRedo24" />
                  </ui:Button>
                  <ui:Button
                      Margin="0,0,10,0"
-                     Content="Save"
+                     Content="{i18n:StringLocalizer 'Save'}"
                      Icon="Save24" />
                  <ui:Button
                      Margin="0,0,10,0"
                      Appearance="Secondary"
-                     Content="Expert" />
+                     Content="{i18n:StringLocalizer 'Expert'}" />
                  
                  <ui:Button
                      Margin="0,0,10,0"
                      Background="#2F70AF"
-                     Content="Add" />
+                     Content="{i18n:StringLocalizer 'Add'}" />
                  <ui:Button
                      Background="#FD292F"
-                     Content="Delete" />
+                     Content="{i18n:StringLocalizer 'Delete'}" />
              </StackPanel>
 
                                                       <!--  Forms  -->
@@ -240,7 +241,7 @@
                        <ContentControl.Resources>
                            <DataTemplate DataType="{x:Type models:TerrainBrace}">
                                <StackPanel>
-                                   <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Terrains folder" />
+                                   <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Terrains folder'}" />
                                    <UniformGrid Columns="2">
                                        <!--  Folder Name  -->
                                        <Grid Style="{StaticResource FormFieldStyle}">
@@ -248,7 +249,7 @@
                                                <RowDefinition Height="Auto" />
                                                <RowDefinition Height="Auto" />
                                            </Grid.RowDefinitions>
-                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Folder Name" />
+                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Folder Name'}" />
                                            <TextBox
                                                Grid.Row="1"
                                                Background="{DynamicResource ControlFillColorDefaultBrush}"
@@ -263,7 +264,7 @@
                                                <RowDefinition Height="Auto" />
                                                <RowDefinition Height="Auto" />
                                            </Grid.RowDefinitions>
-                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Frame Count" />
+                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Frame Count'}" />
                                            <ui:NumberBox
                                                Grid.Row="1"
                                                Background="{DynamicResource ControlFillColorDefaultBrush}"
@@ -277,7 +278,7 @@
 
                            <DataTemplate DataType="{x:Type models:Terrain}">
                                <StackPanel>
-                                   <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Terrain" />
+                                   <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Terrain'}" />
                                    <UniformGrid Columns="2">
                                        <!--  Terrain ID  -->
                                        <Grid Style="{StaticResource FormFieldStyle}">
@@ -285,7 +286,7 @@
                                                <RowDefinition Height="Auto" />
                                                <RowDefinition Height="Auto" />
                                            </Grid.RowDefinitions>
-                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Terrain ID" />
+                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Terrain ID'}" />
                                            <TextBox
                                                Grid.Row="1"
                                                Background="{DynamicResource ControlFillColorDefaultBrush}"
@@ -300,7 +301,7 @@
                                                <RowDefinition Height="Auto" />
                                                <RowDefinition Height="Auto" />
                                            </Grid.RowDefinitions>
-                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Terrain Texture" />
+                                           <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Terrain Texture'}" />
                                            <Grid Grid.Row="1">
                                                <Grid.ColumnDefinitions>
                                                    <ColumnDefinition Width="*" />
@@ -334,7 +335,7 @@
                                    
                                    <!--  Texture Preview Section  -->
                                    <StackPanel Margin="0,20,0,0">
-                                       <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Texture Preview" />
+                                       <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Texture Preview'}" />
                                        <Border
                                            Width="256"
                                            Height="256"
