--- a/eTools Ultimate/Views/Pages/ChangeLog/ChangeLogView.xaml
+++ b/eTools Ultimate/Views/Pages/ChangeLog/ChangeLogView.xaml
@@ -5,7 +5,8 @@
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:viewmodel="clr-namespace:eTools_Ultimate.ViewModels.Pages.ChangeLog"
-    Title="Change Log"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
+    Title="{i18n:StringLocalizer 'Change Log'}"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}">
@@ -97,28 +98,28 @@
 
         <!--  ContextMenu for additional log entry functions  -->
         <ContextMenu x:Key="LogEntryContextMenu">
-            <MenuItem Header="Restore">
+            <MenuItem Header="{i18n:StringLocalizer 'Restore'}">
                 <MenuItem.Icon>
                     <ui:SymbolIcon Symbol="ArrowClockwise24" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Show Details">
+            <MenuItem Header="{i18n:StringLocalizer 'Show Details'}">
                 <MenuItem.Icon>
                     <ui:SymbolIcon Symbol="Info24" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Before/After Comparison">
+            <MenuItem Header="{i18n:StringLocalizer 'Before/After Comparison'}">
                 <MenuItem.Icon>
                     <ui:SymbolIcon Symbol="ArrowSyncCircle24" />
                 </MenuItem.Icon>
             </MenuItem>
             <Separator />
-            <MenuItem Header="Export Entry Changes">
+            <MenuItem Header="{i18n:StringLocalizer 'Export Entry Changes'}">
                 <MenuItem.Icon>
                     <ui:SymbolIcon Symbol="ArrowUpload24" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Hide from List">
+            <MenuItem Header="{i18n:StringLocalizer 'Hide from List'}">
                 <MenuItem.Icon>
                     <ui:SymbolIcon Symbol="Eye24" />
                 </MenuItem.Icon>
@@ -201,10 +202,10 @@
                     Margin="0,0,12,0"
                     Padding="8,4"
                     Appearance="Transparent"
-                    ToolTip="Sort: Newest First">
+                    ToolTip="{i18n:StringLocalizer 'Sort: Newest First'}">
                     <StackPanel Orientation="Horizontal">
                         <ui:SymbolIcon Margin="0,0,4,0" Symbol="ArrowCircleDown24" />
-                        <TextBlock Text="Newest First" />
+                        <TextBlock Text="{i18n:StringLocalizer 'Newest First'}" />
                     </StackPanel>
                 </ui:Button>
                 <ui:Button
@@ -212,21 +213,21 @@
                     Padding="8,4"
                     Appearance="Transparent"
                     Command="{Binding ToggleFiltersVisibilityCommand}"
-                    ToolTip="Show/Hide Filters">
+                    ToolTip="{i18n:StringLocalizer 'Show/Hide Filters'}">
                     <ui:SymbolIcon Symbol="Filter24" />
                 </ui:Button>
                 <ui:Button
                     Margin="0,0,12,0"
                     Padding="8,4"
                     Appearance="Transparent"
-                    ToolTip="Export Log">
+                    ToolTip="{i18n:StringLocalizer 'Export Log'}">
                     <ui:SymbolIcon Symbol="ArrowDownload24" />
                 </ui:Button>
                 <ui:Button
                     Padding="8,4"
                     Appearance="Transparent"
                     Foreground="{DynamicResource SystemFillColorCriticalBrush}"
-                    ToolTip="Delete Logs">
+                    ToolTip="{i18n:StringLocalizer 'Delete Logs'}">
                     <ui:SymbolIcon Symbol="Delete24" />
                 </ui:Button>
             </StackPanel>
@@ -247,14 +248,14 @@
                     Margin="0,0,8,0"
                     VerticalAlignment="Center"
                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                    Text="View Mode:" />
+                    Text="{i18n:StringLocalizer 'View Mode:'}" />
                 <RadioButton
                     Margin="0,0,8,0"
-                    Content="List"
+                    Content="{i18n:StringLocalizer 'List'}"
                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                     IsChecked="{Binding IsListViewMode}" />
                 <RadioButton
-                    Content="Accordion"
+                    Content="{i18n:StringLocalizer 'Accordion'}"
                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                     IsChecked="{Binding IsListViewMode, Converter={StaticResource InverseBooleanConverter}}" />
             </StackPanel>
@@ -271,7 +272,7 @@
                     Margin="4,0,0,0"
                     VerticalAlignment="Center"
                     Style="{StaticResource SecondaryTextStyle}"
-                    Text=" entries found" />
+                    Text="{i18n:StringLocalizer ' entries found'}" />
             </StackPanel>
         </Grid>
 
@@ -297,7 +298,7 @@
                     <ui:TextBox
                         Grid.Column="0"
                         Margin="0,0,8,0"
-                        PlaceholderText="Search logs...">
+                        PlaceholderText="{i18n:StringLocalizer 'Search logs...'}">
                         <ui:TextBox.Icon>
                             <ui:SymbolIcon Symbol="Search24" />
                         </ui:TextBox.Icon>
@@ -308,7 +309,7 @@
                         VerticalAlignment="Center"
                         Appearance="Secondary"
                         Command="{Binding ClearFiltersCommand}"
-                        Content="Reset Filters" />
+                        Content="{i18n:StringLocalizer 'Reset Filters'}" />
                 </Grid>
 
                 <!--  Filter Fields  -->
@@ -328,8 +329,8 @@
                         Grid.Row="0"
                         Grid.Column="0"
                         Margin="0,0,8,12">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Item Name" />
-                        <ui:TextBox PlaceholderText="Filter by item name...">
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Item Name'}" />
+                        <ui:TextBox PlaceholderText="{i18n:StringLocalizer 'Filter by item name...'}">
                             <ui:TextBox.Icon>
                                 <ui:SymbolIcon Symbol="Tag24" />
                             </ui:TextBox.Icon>
@@ -341,8 +342,8 @@
                         Grid.Row="0"
                         Grid.Column="1"
                         Margin="0,0,8,12">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Field" />
-                        <ui:TextBox PlaceholderText="Filter by field name...">
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Field'}" />
+                        <ui:TextBox PlaceholderText="{i18n:StringLocalizer 'Filter by field name...'}">
                             <ui:TextBox.Icon>
                                 <ui:SymbolIcon Symbol="TextT24" />
                             </ui:TextBox.Icon>
@@ -354,8 +355,8 @@
                         Grid.Row="0"
                         Grid.Column="2"
                         Margin="0,0,0,12">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Content" />
-                        <ui:TextBox PlaceholderText="Filter by content change...">
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Content'}" />
+                        <ui:TextBox PlaceholderText="{i18n:StringLocalizer 'Filter by content change...'}">
                             <ui:TextBox.Icon>
                                 <ui:SymbolIcon Symbol="Edit24" />
                             </ui:TextBox.Icon>
@@ -367,7 +368,7 @@
                         Grid.Row="1"
                         Grid.Column="0"
                         Margin="0,0,8,0">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Date From" />
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Date From'}" />
                         <DatePicker SelectedDate="{Binding DateFrom}" />
                     </StackPanel>
 
@@ -376,7 +377,7 @@
                         Grid.Row="1"
                         Grid.Column="1"
                         Margin="0,0,8,0">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Date To" />
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Date To'}" />
                         <DatePicker SelectedDate="{Binding DateTo}" />
                     </StackPanel>
 
@@ -385,7 +386,7 @@
                         Grid.Row="1"
                         Grid.Column="2"
                         Margin="0,0,0,0">
-                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="Change Type" />
+                        <TextBlock Style="{StaticResource LabelTextStyle}" Text="{i18n:StringLocalizer 'Change Type'}" />
                         <ComboBox
                             Background="{DynamicResource ControlFillColorDefaultBrush}"
                             DisplayMemberPath="DisplayName"
@@ -415,12 +416,12 @@
                         HorizontalAlignment="Center"
                         FontSize="16"
                         Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                        Text="No log entries found" />
+                        Text="{i18n:StringLocalizer 'No log entries found'}" />
                     <TextBlock
                         MaxWidth="400"
                         HorizontalAlignment="Center"
                         Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                        Text="Adjust the filters or reset them to see results"
+                        Text="{i18n:StringLocalizer 'Adjust the filters or reset them to see results'}"
                         TextWrapping="Wrap" />
                 </StackPanel>
 
@@ -439,7 +440,7 @@
                             Width="Auto"
                             MinWidth="120"
                             Binding="{Binding Timestamp}"
-                            Header="Timestamp">
+                            Header="{i18n:StringLocalizer 'Timestamp'}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
@@ -457,7 +458,7 @@
                         <DataGridTemplateColumn
                             Width="Auto"
                             MinWidth="60"
-                            Header="Type">
+                            Header="{i18n:StringLocalizer 'Type'}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -471,22 +472,22 @@
                                                         <DataTrigger Binding="{Binding ChangeType}" Value="Add">
                                                             <Setter Property="Symbol" Value="Add24" />
                                                             <Setter Property="Foreground" Value="#4CAF50" />
-                                                            <Setter Property="ToolTip" Value="Added" />
+                                                            <Setter Property="ToolTip" Value="{i18n:StringLocalizer 'Added'}" />
                                                         </DataTrigger>
                                                         <DataTrigger Binding="{Binding ChangeType}" Value="Modify">
                                                             <Setter Property="Symbol" Value="Wrench24" />
                                                             <Setter Property="Foreground" Value="#FF9800" />
-                                                            <Setter Property="ToolTip" Value="Modified" />
+                                                            <Setter Property="ToolTip" Value="{i18n:StringLocalizer 'Modified'}" />
                                                         </DataTrigger>
                                                         <DataTrigger Binding="{Binding ChangeType}" Value="Delete">
                                                             <Setter Property="Symbol" Value="Delete24" />
                                                             <Setter Property="Foreground" Value="#F44336" />
-                                                            <Setter Property="ToolTip" Value="Deleted" />
+                                                            <Setter Property="ToolTip" Value="{i18n:StringLocalizer 'Deleted'}" />
                                                         </DataTrigger>
                                                         <DataTrigger Binding="{Binding ChangeType}" Value="Info">
                                                             <Setter Property="Symbol" Value="Info24" />
                                                             <Setter Property="Foreground" Value="#2196F3" />
-                                                            <Setter Property="ToolTip" Value="Information" />
+                                                            <Setter Property="ToolTip" Value="{i18n:StringLocalizer 'Information'}" />
                                                         </DataTrigger>
                                                     </Style.Triggers>
                                                 </Style>
@@ -506,7 +507,7 @@
                             Width="*"
                             MinWidth="120"
                             Binding="{Binding Item}"
-                            Header="Item">
+                            Header="{i18n:StringLocalizer 'Item'}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
@@ -520,7 +521,7 @@
                             Width="*"
                             MinWidth="120"
                             Binding="{Binding Field}"
-                            Header="Field">
+                            Header="{i18n:StringLocalizer 'Field'}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
@@ -538,7 +539,7 @@
                         <DataGridTemplateColumn
                             Width="*"
                             MinWidth="200"
-                            Header="Value Change">
+                            Header="{i18n:StringLocalizer 'Value Change'}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
@@ -591,7 +592,7 @@
                         <DataGridTemplateColumn
                             Width="Auto"
                             MinWidth="80"
-                            Header="Actions">
+                            Header="{i18n:StringLocalizer 'Actions'}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
@@ -600,14 +601,14 @@
                                             Appearance="Transparent"
                                             Command="{Binding DataContext.RestoreEntryCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
                                             CommandParameter="{Binding}"
-                                            ToolTip="Restore">
+                                            ToolTip="{i18n:StringLocalizer 'Restore'}">
                                             <ui:SymbolIcon Symbol="ArrowClockwise24" />
                                         </ui:Button>
                                         <ui:Button
                                             Appearance="Transparent"
                                             Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
                                             CommandParameter="{Binding}"
-                                            ToolTip="Show Details">
+                                            ToolTip="{i18n:StringLocalizer 'Show Details'}">
                                             <ui:SymbolIcon Symbol="Info24" />
                                         </ui:Button>
                                     </StackPanel>
@@ -649,7 +650,7 @@
                     Margin="4,0"
                     VerticalAlignment="Center"
                     Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                    Text="of" />
+                    Text="{i18n:StringLocalizer 'of'}" />
                 <TextBlock
                     Margin="0,0,4,0"
                     VerticalAlignment="Center"
