--- a/eTools Ultimate/Views/Pages/Collector/CollectorPage.xaml
+++ b/eTools Ultimate/Views/Pages/Collector/CollectorPage.xaml
@@ -6,6 +6,7 @@
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     Title="CollectorPage"
     d:DataContext="{d:DesignInstance local:CollectorPage,
                                      IsDesignTimeCreatable=False}"
@@ -26,7 +27,7 @@
         <!--  Main content with TabControl  -->
         <ui:Card Margin="12" VerticalAlignment="Top">
             <TabControl>
-                <TabItem Header="Enchant">
+                <TabItem Header="{i18n:StringLocalizer 'Enchant'}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -42,22 +43,22 @@
                                 <DataGridTextColumn
                                     Width="150"
                                     Binding="{Binding Level}"
-                                    Header="Enchant Level" />
+                                    Header="{i18n:StringLocalizer 'Enchant Level'}" />
                                 <DataGridTextColumn
                                     Width="200"
                                     Binding="{Binding Probability}"
-                                    Header="Chance (out of 1.000.000)" />
+                                    Header="{i18n:StringLocalizer 'Chance (out of 1.000.000)'}" />
                                 <DataGridTextColumn
                                     Width="100"
                                     Binding="{Binding PercentageFormatted}"
-                                    Header="Percentage" />
-                                <DataGridTemplateColumn Width="80" Header="Action">
+                                    Header="{i18n:StringLocalizer 'Percentage'}" />
+                                <DataGridTemplateColumn Width="80" Header="{i18n:StringLocalizer 'Action'}">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <ui:Button
                                                 Appearance="Transparent"
                                                 Icon="{ui:SymbolIcon Delete24}"
-                                                ToolTip="Delete Item" />
+                                                ToolTip="{i18n:StringLocalizer 'Delete Item'}" />
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
@@ -66,7 +67,7 @@
                     </Grid>
                 </TabItem>
 
-                <TabItem Header="Items">
+                <TabItem Header="{i18n:StringLocalizer 'Items'}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -79,16 +80,16 @@
                             Grid.Row="0"
                             Margin="0,8,0,8"
                             Icon="{ui:SymbolIcon Search24}"
-                            PlaceholderText="Search..." />
+                            PlaceholderText="{i18n:StringLocalizer 'Search...'}" />
 
                         <!--  Status und Add Button  -->
                         <Grid Grid.Row="1" Margin="0,0,0,8">
-                            <ui:TextBlock VerticalAlignment="Center" Text="Total Probability 1.000.000/1.000.000" />
+                            <ui:TextBlock VerticalAlignment="Center" Text="{i18n:StringLocalizer 'Total Probability 1.000.000/1.000.000'}" />
 
                             <ui:Button
                                 HorizontalAlignment="Right"
                                 Appearance="Primary"
-                                Content="Add Item"
+                                Content="{i18n:StringLocalizer 'Add Item'}"
                                 Icon="{ui:SymbolIcon Add24}" />
                         </Grid>
 
@@ -126,7 +127,7 @@
                     </Grid>
                 </TabItem>
 
-                <TabItem Header="Premium Items">
+                <TabItem Header="{i18n:StringLocalizer 'Premium Items'}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -166,7 +167,7 @@
                     </Grid>
                 </TabItem>
 
-                <TabItem Header="Premium Status Items">
+                <TabItem Header="{i18n:StringLocalizer 'Premium Status Items'}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
