--- a/eTools Ultimate/Views/Pages/Couple/CouplePage.xaml
+++ b/eTools Ultimate/Views/Pages/Couple/CouplePage.xaml
@@ -6,6 +6,7 @@
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     Title="CouplePage"
     d:DataContext="{d:DesignInstance local:CouplePage,
                                      IsDesignTimeCreatable=False}"
@@ -79,7 +80,7 @@
                     Margin="10,10,10,10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="Suche..."
+                    PlaceholderText="{i18n:StringLocalizer 'Search...'}"
                     Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}">
                     <ui:TextBox.Resources>
                         <Style TargetType="ui:SymbolIcon">
@@ -97,7 +98,7 @@
                 BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                 BorderThickness="1,0,1,1">
                 <TabControl Background="Transparent" BorderThickness="0">
-                    <TabItem Header="Allgemein">
+                    <TabItem Header="{i18n:StringLocalizer 'General'}">
                         <ListView
                             x:Name="LevelListView"
                             Background="Transparent"
@@ -108,11 +109,11 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Level " />
+                                        <TextBlock Text="{i18n:StringLocalizer 'Level '}" />
                                         <TextBlock Text="{Binding IndexOf}" />
-                                        <TextBlock Text=" - " />
+                                        <TextBlock Text="{i18n:StringLocalizer ' - '}" />
                                         <TextBlock Text="{Binding}" />
-                                        <TextBlock Text=" EP" />
+                                        <TextBlock Text="{i18n:StringLocalizer ' EP'}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
@@ -121,7 +122,7 @@
                             </ListView.ItemContainerStyle>
                         </ListView>
                     </TabItem>
-                    <TabItem Header="Items">
+                    <TabItem Header="{i18n:StringLocalizer 'Items'}">
                         <ListView
                             x:Name="ItemsListView"
                             Background="Transparent"
@@ -199,7 +200,7 @@
                 Margin="0,0,0,15"
                 FontSize="24"
                 FontTypography="Title"
-                Text="Level Information" />
+                Text="{i18n:StringLocalizer 'Level Information'}" />
 
             <!--  Level Information Chart  -->
             <ui:Card
@@ -225,7 +226,7 @@
                             Grid.Column="0"
                             Margin="0,0,10,5"
                             FontWeight="SemiBold"
-                            Text="Level:" />
+                            Text="{i18n:StringLocalizer 'Level:'}" />
                         <TextBlock
                             Grid.Row="0"
                             Grid.Column="1"
@@ -236,7 +237,7 @@
                             Grid.Column="0"
                             Margin="0,0,10,5"
                             FontWeight="SemiBold"
-                            Text="Benötigte EP:" />
+                            Text="{i18n:StringLocalizer 'Required EP:'}" />
                         <TextBlock
                             Grid.Row="1"
                             Grid.Column="1"
@@ -247,7 +248,7 @@
                             Grid.Column="0"
                             Margin="0,0,10,5"
                             FontWeight="SemiBold"
-                            Text="Power Level:" />
+                            Text="{i18n:StringLocalizer 'Power Level:'}" />
                         <TextBlock
                             Grid.Row="2"
                             Grid.Column="1"
@@ -258,7 +259,7 @@
                             Grid.Column="0"
                             Margin="0,0,10,5"
                             FontWeight="SemiBold"
-                            Text="Bless Level:" />
+                            Text="{i18n:StringLocalizer 'Bless Level:'}" />
                         <TextBlock
                             Grid.Row="3"
                             Grid.Column="1"
@@ -269,7 +270,7 @@
                             Grid.Column="0"
                             Margin="0,0,10,5"
                             FontWeight="SemiBold"
-                            Text="Miracle Level:" />
+                            Text="{i18n:StringLocalizer 'Miracle Level:'}" />
                         <TextBlock
                             Grid.Row="4"
                             Grid.Column="1"
@@ -279,7 +280,7 @@
                     <TextBlock
                         Margin="0,15,0,5"
                         HorizontalAlignment="Center"
-                        Text="Erfahrungspunkte-Chart" />
+                        Text="{i18n:StringLocalizer 'Experience Points Chart'}" />
                     <Border
                         Height="150"
                         Background="{DynamicResource ControlFillColorSecondaryBrush}"
@@ -289,7 +290,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                            Text="Visualisierung der Erfahrungspunkte über Level" />
+                            Text="{i18n:StringLocalizer 'Visualization of experience points over levels'}" />
                     </Border>
                 </StackPanel>
             </ui:Card>
@@ -300,7 +301,7 @@
                 Margin="0,0,0,10"
                 FontSize="18"
                 FontTypography="Title"
-                Text="Skill Unlocks" />
+                Text="{i18n:StringLocalizer 'Skill Unlocks'}" />
 
             <!--  Skill Tabs  -->
             <ui:Card
@@ -308,7 +309,7 @@
                 Margin="0,0,0,0"
                 Padding="0">
                 <TabControl Background="Transparent" BorderThickness="0">
-                    <TabItem Header="Couple Level">
+                    <TabItem Header="{i18n:StringLocalizer 'Couple Level'}">
                         <DataGrid
                             Margin="10"
                             AutoGenerateColumns="False"
@@ -319,10 +320,10 @@
                             IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Width="Auto" Header="Level" />
-                                <DataGridTextColumn Width="Auto" Header="Geschlecht" />
-                                <DataGridTextColumn Width="Auto" Header="Dauer (Std.)" />
-                                <DataGridTextColumn Width="Auto" Header="Menge" />
-                                <DataGridTextColumn Width="*" Header="Wahrscheinlichkeit" />
+                                <DataGridTextColumn Width="Auto" Header="{i18n:StringLocalizer 'Gender'}" />
+                                <DataGridTextColumn Width="Auto" Header="{i18n:StringLocalizer 'Duration (Hours)'}" />
+                                <DataGridTextColumn Width="Auto" Header="{i18n:StringLocalizer 'Amount'}" />
+                                <DataGridTextColumn Width="*" Header="{i18n:StringLocalizer 'Probability'}" />
                             </DataGrid.Columns>
                         </DataGrid>
                     </TabItem>
@@ -337,7 +338,7 @@
                             IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Width="Auto" Header="Level" />
-                                <DataGridTextColumn Width="*" Header="Beschreibung" />
+                                <DataGridTextColumn Width="*" Header="{i18n:StringLocalizer 'Description'}" />
                             </DataGrid.Columns>
                         </DataGrid>
                     </TabItem>
@@ -352,7 +353,7 @@
                             IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Width="Auto" Header="Level" />
-                                <DataGridTextColumn Width="*" Header="Beschreibung" />
+                                <DataGridTextColumn Width="*" Header="{i18n:StringLocalizer 'Description'}" />
                             </DataGrid.Columns>
                         </DataGrid>
                     </TabItem>
@@ -367,7 +368,7 @@
                             IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Width="Auto" Header="Level" />
-                                <DataGridTextColumn Width="*" Header="Beschreibung" />
+                                <DataGridTextColumn Width="*" Header="{i18n:StringLocalizer 'Description'}" />
                             </DataGrid.Columns>
                         </DataGrid>
                     </TabItem>
