--- a/eTools Ultimate/Views/Pages/Giftbox/EditGiftboxItemDialog.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/EditGiftboxItemDialog.xaml
@@ -5,15 +5,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="Edit Item"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
+    Title="{i18n:StringLocalizer 'Edit Item'}"
     Height="500"
     Width="500"
     WindowStartupLocation="CenterOwner"
     ResizeMode="CanResize"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    Background="{DynamicResource ApplicationBackgroundBrush}"
-    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    ui:Design.Background="White"
+    ui:Design.Foreground="Black"
+    Background="White"
+    Foreground="Black"
     mc:Ignorable="d">
 
     <Window.Resources>
@@ -21,34 +22,11 @@
             <Setter Property="FontSize" Value="18" />
             <Setter Property="FontWeight" Value="SemiBold" />
             <Setter Property="Margin" Value="0,15,0,10" />
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
         </Style>
 
         <Style x:Key="LabelStyle" TargetType="TextBlock">
             <Setter Property="FontWeight" Value="Medium" />
             <Setter Property="Margin" Value="0,8,0,4" />
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
-        </Style>
-
-        <!--  TextBox Style  -->
-        <Style
-            x:Key="AppTextBoxStyle"
-            BasedOn="{StaticResource {x:Type TextBox}}"
-            TargetType="TextBox">
-            <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
-            <Setter Property="BorderBrush" Value="{DynamicResource ControlElevationBorderBrush}" />
-            <Setter Property="Padding" Value="8,5" />
-        </Style>
-
-        <!--  ComboBox Style  -->
-        <Style
-            x:Key="AppComboBoxStyle"
-            BasedOn="{StaticResource {x:Type ComboBox}}"
-            TargetType="ComboBox">
-            <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
-            <Setter Property="BorderBrush" Value="{DynamicResource ControlElevationBorderBrush}" />
         </Style>
 
         <Style x:Key="FormFieldStyle" TargetType="Grid">
@@ -60,7 +38,6 @@
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Margin" Value="5,0,0,0" />
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorSecondaryBrush}" />
         </Style>
     </Window.Resources>
 
@@ -74,7 +51,7 @@
                 <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Visible" Margin="20,20,0,0">
                     <StackPanel Margin="0,0,20,0">
                 <!-- Item Information Section -->
-                <TextBlock Text="Item Information" Style="{StaticResource SectionHeaderStyle}" />
+                <TextBlock Text="{i18n:StringLocalizer 'Item Information'}" Style="{StaticResource SectionHeaderStyle}" />
                 
                 <!-- Item Icon and Name -->
                 <Grid Margin="0,0,0,15">
@@ -88,8 +65,8 @@
                         Width="64"
                         Height="64"
                         Margin="0,0,15,0"
-                        Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                        BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                        Background="Transparent"
+                        BorderBrush="Gray"
                         BorderThickness="1"
                         CornerRadius="4">
                         <Image
@@ -102,11 +79,9 @@
                         <TextBlock
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                             Text="{Binding Item.Name}" />
                         <TextBlock
                             FontSize="12"
-                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                             Text="{Binding Item.Identifier}" />
                     </StackPanel>
                 </Grid>
@@ -120,7 +95,7 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Quantity" />
+                            <TextBlock Style="{StaticResource LabelStyle}" Text="{i18n:StringLocalizer 'Quantity'}" />
                             <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                 <ui:SymbolIcon.ToolTip>
                                     <ToolTip Content="Quantity of the item" />
@@ -130,7 +105,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Quantity}" />
+                            Value="{Binding Prop.NNum}" />
                     </Grid>
 
                     <!-- Probability -->
@@ -140,7 +115,7 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Probability (%)" />
+                            <TextBlock Style="{StaticResource LabelStyle}" Text="{i18n:StringLocalizer 'Probability (%)'}" />
                             <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                 <ui:SymbolIcon.ToolTip>
                                     <ToolTip Content="Probability percentage" />
@@ -150,34 +125,32 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Probability}" />
+                            Value="{Binding Prop.DwProbability}" />
                     </Grid>
                 </UniformGrid>
 
 
 
                                         <!-- Preview Section -->
-                        <TextBlock Text="Preview" Style="{StaticResource SectionHeaderStyle}" />
+                        <TextBlock Text="{i18n:StringLocalizer 'Preview'}" Style="{StaticResource SectionHeaderStyle}" />
                         
                         <Border
                             Margin="0,0,20,15"
-                            Background="{DynamicResource ControlFillColorDefaultBrush}"
-                            BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                            Background="LightGray"
+                            BorderBrush="Gray"
                             BorderThickness="1"
                             CornerRadius="4"
                             Padding="15">
                     <StackPanel>
                         <TextBlock
                             FontWeight="SemiBold"
-                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                            Text="Item Summary:" />
+                            Text="{i18n:StringLocalizer 'Item Summary:'}" />
                         <TextBlock
-                            Margin="0,5,0,0"
-                            Foreground="{DynamicResource TextFillColorSecondaryBrush}">
-                            <Run Text="Quantity: " />
-                            <Run Text="{Binding Quantity}" />
+                            Margin="0,5,0,0">
+                            <Run Text="{i18n:StringLocalizer 'Quantity: '}" />
+                            <Run Text="{Binding Prop.NNum}" />
                             <Run Text=" | Probability: " />
-                            <Run Text="{Binding Probability}" />
+                            <Run Text="{Binding ProbabilityPercent}" />
                             <Run Text="%" />
                         </TextBlock>
                     </StackPanel>
@@ -188,8 +161,8 @@
                         <!-- Button Area -->
                 <Border
                     Grid.Row="1"
-                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="LightGray"
+                    BorderBrush="Gray"
                     BorderThickness="0,1,0,0"
                     Padding="20">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
