--- a/eTools Ultimate/Views/Pages/Honor/HonorPage.xaml
+++ b/eTools Ultimate/Views/Pages/Honor/HonorPage.xaml
@@ -9,6 +9,7 @@
     xmlns:models="clr-namespace:eTools_Ultimate.Models"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     Title="Honor List"
     d:DataContext="{d:DesignInstance local:HonorPage,
                                      IsDesignTimeCreatable=False}"
@@ -105,7 +106,7 @@
                     Margin="10,10,10,10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="Suche nach Titeln..."
+                    PlaceholderText="{i18n:StringLocalizer 'Suche nach Titeln...'}"
                     Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
@@ -180,46 +181,46 @@
             <Grid>
                 <!--  Action Buttons oben rechts  -->
                 <StackPanel
-                    Margin="0,10,20,0"
+                    Margin="0,10,30,0"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
                     Orientation="Horizontal"
                     ZIndex="1">
-                    <ui:Button ToolTip="Undo">
+                    <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
-                    <ui:Button Margin="10,0,10,0" ToolTip="Redo">
+                    <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                         <ui:SymbolIcon Symbol="ArrowRedo24" />
                     </ui:Button>
                     <ui:Button
                         x:Name="SaveButton"
                         Margin="0,0,10,0"
                         Command="{Binding ViewModel.UpdateHonorItemCommand}"
-                        Content="Save" />
+                        Content="{i18n:StringLocalizer 'Save'}" />
                     <ui:Button
                         x:Name="ExpertButton"
                         Margin="0,0,10,0"
                         Appearance="Secondary"
-                        Content="Expert" />
+                        Content="{i18n:StringLocalizer 'Expert'}" />
                     
                     <ui:Button
                         x:Name="AddButton"
                         Margin="0,0,10,0"
                         Background="#2F70AF"
                         Command="{Binding ViewModel.AddHonorItemCommand}"
-                        Content="Add" />
+                        Content="{i18n:StringLocalizer 'Add'}" />
                     <ui:Button
                         x:Name="DeleteButton"
                         Background="#FD292F"
                         Command="{Binding ViewModel.DeleteHonorItemCommand}"
-                        Content="Delete" />
+                        Content="{i18n:StringLocalizer 'Delete'}" />
                 </StackPanel>
 
                 <!--  Formulare  -->
                 <StackPanel Margin="20">
                     <!--  Honor Details Section  -->
                     <StackPanel>
-                        <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Honor Details" />
+                        <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Honor Details'}" />
                         <UniformGrid Columns="2">
                             <!--  Index  -->
                             <Grid Style="{StaticResource FormFieldStyle}">
@@ -228,10 +229,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Index" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Index'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Unique index of the honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Unique index of the honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
@@ -249,10 +250,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Title ID" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Title ID'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Unique identifier for the honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Unique identifier for the honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
@@ -269,10 +270,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Title Name" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Title Name'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Display name of the honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Display name of the honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
@@ -289,10 +290,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Category" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Category'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Category of the honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Category of the honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
@@ -316,10 +317,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Sub Category" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Sub Category'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Subcategory of the honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Subcategory of the honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
@@ -336,10 +337,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Required Value" />
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Required Value'}" />
                                     <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Required value to obtain this honor title" />
+                                            <ToolTip Content="{i18n:StringLocalizer 'Required value to obtain this honor title'}" />
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
