--- a/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
+++ b/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
@@ -8,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     Title="TextClientPage"
     d:DataContext="{d:DesignInstance viewmodels:TextClientViewModel,
                                      IsDesignTimeCreatable=False}"
@@ -106,7 +107,7 @@
                     Margin="10,10,10,10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="Search..."
+                    PlaceholderText="{i18n:StringLocalizer 'Search...'}"
                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
@@ -193,35 +194,35 @@
                     Grid.Column="0"
                     FontSize="24"
                     FontWeight="Bold"
-                    Text="Text Editor" />
+                    Text="{i18n:StringLocalizer 'Text Editor'}" />
 
-                <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <ui:Button Margin="0,0,0,0" ToolTip="Undo">
+                <StackPanel Grid.Column="1" Margin="0,0,10,0" Orientation="Horizontal">
+                    <ui:Button Margin="0,0,0,0" ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
-                    <ui:Button Margin="10,0,10,0" ToolTip="Redo">
+                    <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                         <ui:SymbolIcon Symbol="ArrowRedo24" />
                     </ui:Button>
                     <ui:Button
                         Margin="0,0,10,0"
                         Click="SaveButton_Click"
-                        Content="Save" />
+                        Content="{i18n:StringLocalizer 'Save'}" />
                     <ui:Button
                         Margin="0,0,10,0"
                         Appearance="Secondary"
-                        Content="Expert"
+                        Content="{i18n:StringLocalizer 'Expert'}"
                         Icon="Settings24" />
                     <ui:Button
                         Margin="0,0,10,0"
                         Background="#2F70AF"
                         Command="{Binding AddTextCommand}"
-                        Content="Add"
+                        Content="{i18n:StringLocalizer 'Add'}"
                         Icon="Add24" />
                     <ui:Button
                         Margin="0,0,0,0"
                         Background="#FD292F"
                         Command="{Binding DeleteTextCommand}"
-                        Content="Delete"
+                        Content="{i18n:StringLocalizer 'Delete'}"
                         Icon="Delete24" />
                 </StackPanel>
             </Grid>
@@ -230,7 +231,7 @@
             <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
                 <StackPanel>
                     <!--  General Section  -->
-                    <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="General" />
+                    <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'General'}" />
 
                     <!--  Text ID  -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -239,10 +240,10 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Text ID" />
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Text ID'}" />
                             <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                 <ui:SymbolIcon.ToolTip>
-                                    <ToolTip Content="Unique identifier for the text entry" />
+                                    <ToolTip Content="{i18n:StringLocalizer 'Unique identifier for the text entry'}" />
                                 </ui:SymbolIcon.ToolTip>
                             </ui:SymbolIcon>
                         </StackPanel>
@@ -261,10 +262,10 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="InGame Text" />
+                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'InGame Text'}" />
                             <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
                                 <ui:SymbolIcon.ToolTip>
-                                    <ToolTip Content="Text displayed in game" />
+                                    <ToolTip Content="{i18n:StringLocalizer 'Text displayed in game'}" />
                                 </ui:SymbolIcon.ToolTip>
                             </ui:SymbolIcon>
                         </StackPanel>
@@ -287,7 +288,7 @@
                                 BorderThickness="1"
                                 Command="{Binding OpenColorPickerCommand, Mode=OneWay}">
                                 <Button.ToolTip>
-                                    <ToolTip Content="Click to change color" />
+                                    <ToolTip Content="{i18n:StringLocalizer 'Click to change color'}" />
                                 </Button.ToolTip>
                             </Button>
                             <Popup
