--- a/eTools Ultimate/Views/Pages/World/WorldPage.xaml
+++ b/eTools Ultimate/Views/Pages/World/WorldPage.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     Title="World"
     d:DesignHeight="800"
     d:DesignWidth="1200"
@@ -71,7 +72,7 @@
         <!-- World Properties Template -->
         <DataTemplate x:Key="WorldPropertiesTemplate">
             <StackPanel>
-                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="World Properties" />
+                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'World Properties'}" />
                 <UniformGrid Columns="2">
                     <!-- World Name -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -79,7 +80,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World Name" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World Name'}" />
                         <TextBox Grid.Row="1" Text="{Binding WorldName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
@@ -89,7 +90,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World Key" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World Key'}" />
                         <TextBox Grid.Row="1" Text="{Binding WorldKey, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
@@ -99,7 +100,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World ID" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World ID'}" />
                         <TextBox Grid.Row="1" Text="{Binding WorldId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
@@ -109,7 +110,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World Define" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World Define'}" />
                         <TextBox Grid.Row="1" Text="{Binding WorldDefine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
@@ -119,7 +120,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World Define ID" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World Define ID'}" />
                         <TextBox Grid.Row="1" Text="{Binding WorldDefineId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
@@ -129,7 +130,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="World Folder" />
+                        <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'World Folder'}" />
                         <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -172,7 +173,7 @@
                     Margin="10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="Search..."
+                    PlaceholderText="{i18n:StringLocalizer 'Search...'}"
                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
@@ -249,28 +250,28 @@
                     VerticalAlignment="Top"
                     Orientation="Horizontal"
                     Panel.ZIndex="1">
-                    <ui:Button ToolTip="Undo">
+                    <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
-                    <ui:Button Margin="10,0" ToolTip="Redo">
+                    <ui:Button Margin="10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                         <ui:SymbolIcon Symbol="ArrowRedo24" />
                     </ui:Button>
                     <ui:Button
                         Margin="0,0,10,0"
-                        Content="Save"
+                        Content="{i18n:StringLocalizer 'Save'}"
                         Icon="Save24" />
                     <ui:Button
                         Margin="0,0,10,0"
                         Appearance="Secondary"
-                        Content="Expert" />
+                        Content="{i18n:StringLocalizer 'Expert'}" />
                     
                     <ui:Button
                         Margin="0,0,10,0"
                         Background="#2F70AF"
-                        Content="Add" />
+                        Content="{i18n:StringLocalizer 'Add'}" />
                     <ui:Button
                         Background="#FD292F"
-                        Content="Delete" />
+                        Content="{i18n:StringLocalizer 'Delete'}" />
                 </StackPanel>
 
                 <!-- Forms -->
@@ -294,21 +295,21 @@
                             Grid.Row="0"
                             Grid.ColumnSpan="2"
                             Style="{StaticResource SectionHeaderStyle}" 
-                            Text="Map Preview" />
+                            Text="{i18n:StringLocalizer 'Map Preview'}" />
 
                         <!-- Subheaders -->
                         <TextBlock 
                             Grid.Row="1"
                             Grid.Column="0"
                             Style="{StaticResource FieldLabelStyle}" 
-                            Text="BigMap" 
+                            Text="{i18n:StringLocalizer 'BigMap'}" 
                             Margin="0,10,0,10"/>
 
         <TextBlock
                             Grid.Row="1"
                             Grid.Column="1"
                             Style="{StaticResource FieldLabelStyle}" 
-                            Text="MiniMap" 
+                            Text="{i18n:StringLocalizer 'MiniMap'}" 
                             Margin="20,10,0,10"/>
 
                         <!-- BigMap Preview -->
@@ -336,7 +337,7 @@
                                     Panel.ZIndex="1">
                                     <ui:Button 
                                         Margin="0,0,5,0" 
-                                        ToolTip="Zoom In"
+                                        ToolTip="{i18n:StringLocalizer 'Zoom In'}"
                                         Command="{Binding ZoomInCommand}"
                                         Background="{DynamicResource ControlFillColorDefaultBrush}"
                                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -344,7 +345,7 @@
                                         <ui:SymbolIcon Symbol="ZoomIn24" />
                                     </ui:Button>
                                     <ui:Button 
-                                        ToolTip="Zoom Out"
+                                        ToolTip="{i18n:StringLocalizer 'Zoom Out'}"
                                         Command="{Binding ZoomOutCommand}"
                                         Background="{DynamicResource ControlFillColorDefaultBrush}"
                                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -363,7 +364,7 @@
                                     Background="{DynamicResource ControlFillColorDefaultBrush}"
                                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                     BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                    ToolTip="Reset View">
+                                    ToolTip="{i18n:StringLocalizer 'Reset View'}">
                                     <ui:SymbolIcon Symbol="ArrowReset24" />
                                 </ui:Button>
                             </Grid>
@@ -398,7 +399,7 @@
                                     Background="{DynamicResource ControlFillColorDefaultBrush}"
                                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                     BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                    ToolTip="Refresh MiniMap">
+                                    ToolTip="{i18n:StringLocalizer 'Refresh MiniMap'}">
                                     <ui:SymbolIcon Symbol="ArrowSync24" />
                                 </ui:Button>
                             </Grid>
