--- a/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
+++ b/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
@@ -3,10 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="Loading error"
+    Title="{i18n:StringLocalizer 'Loading error'}"
     Width="400"
     Height="200"
     d:DataContext="{d:DesignInstance local:LoadingErrorWindow,
@@ -45,7 +46,7 @@
                         Source="/Views/Windows/WarningIcon.png" />
                     <TextBlock
                         VerticalAlignment="Center"
-                        Text="Not all files could be loaded."
+                        Text="{i18n:StringLocalizer 'Not all files could be loaded.'}"
                         TextAlignment="Center"
                         TextWrapping="Wrap" />
                 </StackPanel>
@@ -67,12 +68,12 @@
                     Width="120"
                     Height="30"
                     Margin="0,0,10,10"
-                    Content="Go to Resource Path" Click="Button_Click" />
+                    Content="{i18n:StringLocalizer 'Go to Resource Path'}" Click="Button_Click" />
                 <Button
                     Width="135"
                     Height="30"
                     Margin="0,0,10,10"
-                    Content="Close Application" Click="Button_Click_1" />
+                    Content="{i18n:StringLocalizer 'Close Application'}" Click="Button_Click_1" />
             </StackPanel>
         </Grid>
 
