--- a/eTools Ultimate/Views/Windows/WarningDialog.xaml
+++ b/eTools Ultimate/Views/Windows/WarningDialog.xaml
@@ -3,15 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools.Views.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="Warning"
+    Title="{i18n:StringLocalizer 'Warning'}"
     d:DesignHeight="200"
     d:DesignWidth="400"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    CloseButtonText="Cancel"
+    CloseButtonText="{i18n:StringLocalizer 'Cancel'}"
     DialogMaxWidth="400"
     mc:Ignorable="d">
 
@@ -37,7 +38,7 @@
                 Source="/Views/Windows/WarningIcon.png" />
             <TextBlock
                 VerticalAlignment="Center"
-                Text="Not all files could be loaded."
+                Text="{i18n:StringLocalizer 'Not all files could be loaded.'}"
                 TextAlignment="Center"
                 TextWrapping="Wrap" />
         </StackPanel>
@@ -53,12 +54,12 @@
                 Height="30"
                 Margin="0,0,10,0"
                 Click="GoToResourcePath_Click"
-                Content="Go to Resource Path" />
+                Content="{i18n:StringLocalizer 'Go to Resource Path'}" />
             <Button
                 Width="135"
                 Height="30"
                 Click="CloseApplication_Click"
-                Content="Close Application" />
+                Content="{i18n:StringLocalizer 'Close Application'}" />
         </StackPanel>
     </Grid>
 </ui:ContentDialog> 
